--- a/test-app/hazo_auth_config.ini
+++ b/test-app/hazo_auth_config.ini
@@ -100,7 +100,7 @@ enable_admin_ui = true
 
 [hazo_auth__password_requirements]
 # Shared password requirements used by register and reset password layouts
-# minimum_length = 8
+minimum_length = 3
 # require_uppercase = false
 # require_lowercase = false
 # require_number = false
