--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "SETUP_CHECKLIST.md"
   ],
   "workspaces": [
     "test-app"
