--- a/hazo_chat_config.ini
+++ b/hazo_chat_config.ini
@@ -4,7 +4,12 @@
 ; Values here can be overridden by environment variables where applicable.
 
 [chat]
-; Polling interval in milliseconds for checking new messages
+; Real-time update mode: "polling" (automatic) or "manual" (refresh only)
+; polling: Automatically checks for new messages at the specified interval
+; manual: Only updates when user manually refreshes (via refresh button)
+realtime_mode = manual
+
+; Polling interval in milliseconds for checking new messages (only used when realtime_mode = polling)
 polling_interval = 5000
 
 ; Number of messages to load per page (pagination)
