--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "homepage": "https://github.com/pub12/hazo_chat#readme",
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
