--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "hazo_connect": "^2.3.1",
     "next": ">=14.0.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwindcss": ">=3.0.0"
   },
   "peerDependenciesMeta": {
     "hazo_connect": {
