--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hazo_chat",
-  "version": "3.0.0",
-  "description": "Chat interface for 1-1 communication with API-first architecture",
+  "version": "3.1.0",
+  "description": "Chat interface for group-based communication with API-first architecture",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
