--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hazo_chat",
-  "version": "3.2.0",
+  "version": "4.0.0",
   "description": "Chat interface for group-based communication with API-first architecture",
   "type": "module",
   "main": "./dist/index.js",
@@ -84,11 +84,13 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "hazo_logs": "^1.0.0",
     "next": "^14.2.33",
     "typescript": "^5.3.0"
   },
   "peerDependencies": {
     "hazo_connect": "^2.3.1",
+    "hazo_logs": "^1.0.0",
     "next": ">=14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -96,6 +98,9 @@
   },
   "peerDependenciesMeta": {
     "hazo_connect": {
+      "optional": true
+    },
+    "hazo_logs": {
       "optional": true
     },
     "next": {
